<resources>
    <string name="app_name">FriendlyHR</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label"><b>Position</b></string>
    <string name="second_fragment_label"><b>Details</b></string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.
    </string>
    <string name="description">Description</string>
    <string name="technologies">Technologies</string>
    <string name="frontend_developer">FrontEnd Developer</string>
    <string name="google">Google</string>
    <string name="_40_000_80_000">$40,000 - $80,000</string>
    <string name="share">Share</string>
    <string name="overview">Overview</string>
</resources>